moved location of push-virtual-tag.sh
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -138,7 +138,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Push multi-platform virtual tag
-        run: .github/workflows/scripts/push-virtual-tag.sh
+        run: sh scripts/push-virtual-tag.sh
         env:
           CPU_ARCHS: amd64 arm64 arm
 
