--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -155,7 +155,7 @@ jobs:
           COSIGN_EXPERIMENTAL: "true"
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
-        run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push-operator.outputs.digest }}
+        run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.push-virtual-tag.outputs.digest }}
 
   build-bundle:
     if: startsWith(github.ref, 'refs/tags/v')
