--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -142,23 +142,11 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Push multi-platform virtual tag
+      - name: Push multi-platform virtual tag and sign
         run: bash scripts/push-virtual-tag.sh
         env:
           TAGS: ${{ steps.meta.outputs.tags }}
           CPU_ARCHS: amd64 arm64 arm
-
-      # Sign the resulting Docker image digest except on PRs.
-      # This will only write to the public Rekor transparency log when the Docker
-      # repository is public to avoid leaking data.  If you would like to publish
-      # transparency data even for private images, pass --force to cosign below.
-      # https://github.com/sigstore/cosign
-      - name: Sign the published Docker image
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-        # This step uses the identity token to provision an ephemeral certificate
-        # against the sigstore community Fulcio instance.
-        run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.push-virtual-tag.outputs.digest }}
 
   build-bundle:
     if: startsWith(github.ref, 'refs/tags/v')
