--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,7 +9,7 @@ on:
   schedule:
     - cron: "43 9 * * *"
   push:
-    branches: [main,simplify-release-workflow] # TODO: remove 
+    branches: [main]
     # Publish semver tags as releases.
     tags: ["v*.*.*"]
 
