--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -14,4 +14,4 @@ kind: Kustomization
 images:
 - name: controller
   newName: ghcr.io/mondoohq/mondoo-operator
-  newTag: v0.2.5
+  newTag: sha256-caa8b7adccd0cd1dc2ae6c47477fe35d802a6f46.sig
