🧹 Speed up container image build process (#309)
* change build process for containers such that binaries are build on the host

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* fixed version pin on cosign-installer action

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* attempt to create a multi-arch container manifest

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* extracted virtual tag creation to a script

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* moved location of push-virtual-tag.sh

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* added checkout step in push-virtual-tag

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* use bash instead of sh

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* added some logging

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* set TAGS when pushing virtual tag

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* simplified push-virtual-tag.sh

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* added more comments

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* fixed broken script

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* move signing virtual tags into push-virtual-tag.sh

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* add caching for Go

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* fake change to check workflows execution times

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* removed extra branch from publish workflow

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* moved TARGET_OS=linux from load-minikube to docker-build

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* increase retry loop in an attempt to make the integration tests more stable

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,6 +22,7 @@ env:
 
 jobs:
   build-operator:
+    name: Build operator binaries
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -29,6 +30,11 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
+    
+    strategy:
+      matrix:
+        os: [linux]
+        arch: [amd64, arm64, arm]
 
     steps:
       - name: extract tag/version
@@ -38,27 +44,44 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "${{ env.golang-version }}"
+
+      # Get values for cache paths to be used in later steps
+      - id: go-cache-paths
+        run: |
+          echo "::set-output name=go-build::$(go env GOCACHE)"
+          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # Cache go build cache, used to speedup go test
+      - name: Go Build Cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.go-cache-paths.outputs.go-build }}
+          key: ${{ runner.os }}-${{ matrix.os }}-${{ matrix.arch }}-go-build-${{ hashFiles('**/go.sum') }}
+
+      # Cache go mod cache, used to speedup builds
+      - name: Go Mod Cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.go-cache-paths.outputs.go-mod }}
+          key: ${{ runner.os }}-${{ matrix.os }}-${{ matrix.arch }}-go-mod-${{ hashFiles('**/go.sum') }}
+
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
-        uses: sigstore/cosign-installer@1e95c1de343b5b0c23352d6417ee3e48d5bcd422
+        uses: sigstore/cosign-installer@v2.3.0
         with:
-          cosign-release: "v1.4.0"
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: amd64,arm
-
-      # Workaround: https://github.com/docker/build-push-action/issues/461
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+          cosign-release: "v1.8.0"
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
-        uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+        uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -68,23 +91,26 @@ jobs:
       # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: |
+            suffix=-${{ matrix.arch }},onlatest=true
+
+      - name: Build binaries
+        run: VERSION=${{ steps.get_version.outputs.VERSION }} TARGET_OS=${{ matrix.os }} TARGET_ARCH=${{ matrix.arch }} make build
 
       # Build and push Docker image with Buildx
       # https://github.com/docker/build-push-action
       - name: Build and push operator image
         id: build-and-push-operator
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          platforms: ${{ matrix.os }}/${{ matrix.arch }}
           push: true
           labels: ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
-          build_args: |
-            VERSION=${{ steps.get_version.outputs.VERSION }}
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
@@ -98,10 +124,57 @@ jobs:
         # against the sigstore community Fulcio instance.
         run: cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build-and-push-operator.outputs.digest }}
 
+  push-virtual-tag:
+    name: Push multi-platform virtual tag
+    runs-on: ubuntu-latest
+    needs:
+      - build-operator
+
+    permissions:
+      contents: read
+      packages: write
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # Install the cosign tool except on PR
+      # https://github.com/sigstore/cosign-installer
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v2.3.0
+        with:
+          cosign-release: "v1.8.0"
+
+      # Login against a Docker registry except on PR
+      # https://github.com/docker/login-action
+      - name: Log into registry ${{ env.REGISTRY }}
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Extract metadata (tags, labels) for Docker
+      # https://github.com/docker/metadata-action
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Push multi-platform virtual tag and sign
+        run: bash scripts/push-virtual-tag.sh
+        env:
+          TAGS: ${{ steps.meta.outputs.tags }}
+          CPU_ARCHS: amd64 arm64 arm
+
   build-bundle:
     if: startsWith(github.ref, 'refs/tags/v')
     needs:
-      - build-operator
+      - push-virtual-tag
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -121,24 +194,14 @@ jobs:
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
-        uses: sigstore/cosign-installer@1e95c1de343b5b0c23352d6417ee3e48d5bcd422
+        uses: sigstore/cosign-installer@v2.3.0
         with:
-          cosign-release: "v1.4.0"
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: amd64,arm
-
-      # Workaround: https://github.com/docker/build-push-action/issues/461
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+          cosign-release: "v1.8.0"
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
-        uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+        uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -163,14 +226,14 @@ jobs:
       # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
         id: meta-bundle
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v3
         with:
           images: "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-bundle"
 
       # Build and push Docker image bundle with Buildx
       - name: Build and push bundle image
         id: build-and-push-bundle
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@v2
         with:
           context: .
           file: bundle.Dockerfile
@@ -205,11 +268,11 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/release-manifests.yaml
     needs:
-      - build-operator
+      - push-virtual-tag
 
   # publish helm chart after the release of container images is complete
   run-release-helm:
     if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/release-helm-chart.yaml
     needs:
-      - build-operator
+      - push-virtual-tag
