processed review comments
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/samples/k8s_v1alpha2_mondoooperatorconfig.yaml
+++ b/config/samples/k8s_v1alpha2_mondoooperatorconfig.yaml
@@ -1,6 +1,8 @@
 apiVersion: k8s.mondoo.com/v1alpha2
 kind: MondooOperatorConfig
 metadata:
-  name: mondoooperatorconfig-sample
+  name: mondoo-operator-config
 spec:
-  # TODO(user): Add fields here
+  metrics:
+    enable: false
+  skipContainerResolution: false
