added default value for Scanner.ServiceAcccountName
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -323,6 +323,7 @@ spec:
                         type: object
                     type: object
                   serviceAccountName:
+                    default: mondoo-operator-workload
                     type: string
                 type: object
             type: object
