made MondooCredsSecreRef a required field in MondooAuditConfig
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -326,6 +326,8 @@ spec:
                     default: mondoo-operator-workload
                     type: string
                 type: object
+            required:
+            - mondooCredsSecretRef
             type: object
           status:
             description: MondooAuditConfigStatus defines the observed state of MondooAuditConfig
