--- a/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
@@ -4,6 +4,7 @@ metadata:
   name: mondoo-client
   namespace: mondoo-operator
 spec:
+  mondooCredsSecretRef: mondoo-client
   kubernetesResources:
     enable: true
   nodes:
