added image pre-pull for integration tests
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -87,6 +87,9 @@ jobs:
         run: |
           echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
 
+      - name: Pre-pull container images
+        run: minikube image load docker.io/mondoo/client:latest
+
       # Now that dependencies are cached the tests start almost immediately after minikube has started
       # this makes tests fail occasionally. This sleep gives the runner some time to become more stable
       # before the test execution starts.
