--- a/config/rbac/k8s_resources_scanning_clusterrole.yaml
+++ b/config/rbac/k8s_resources_scanning_clusterrole.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: workload
+  name: k8s-resources-scanning
 rules:
 - apiGroups:
   - '*'
