--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,9 +26,6 @@ jobs:
           echo "::set-output name=go-build::$(go env GOCACHE)" 
           echo "::set-output name=go-mod::$(go env GOMODCACHE)"
 
-      - name: Checkout
-        uses: actions/checkout@v2
-
       # Cache go build cache, used to speedup go test
       - name: Go Build Cache
         uses: actions/cache@v2
@@ -72,9 +69,6 @@ jobs:
           echo "::set-output name=go-build::$(go env GOCACHE)"
           echo "::set-output name=go-mod::$(go env GOMODCACHE)"
 
-      - name: Checkout
-        uses: actions/checkout@v2
-
       # Cache go build cache, used to speedup go test
       - name: Go Build Cache
         uses: actions/cache@v2
@@ -92,10 +86,16 @@ jobs:
       - name: Store creds
         run: |
           echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
-      - name: Test failure
-        run: |
-          kubectl get pods -n kube-system
-          kubectl get deployments -A
+
+      - name: Pre-pull container images
+        run: minikube image load docker.io/mondoo/client:latest
+
+      # Now that dependencies are cached the tests start almost immediately after minikube has started
+      # this makes tests fail occasionally. This sleep gives the runner some time to become more stable
+      # before the test execution starts.
+      - name: Wait a bit for the runner to become more stable
+        run: sleep 50
+
       - run: make test/integration/ci
       - uses: actions/download-artifact@v3 # download the unit test results
         with:
